Bug Fix: whitespace along the margin
The bootstrap components cause the white space.

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,10 @@
 
 .secondaryTitleStyle {
     font-size:20px;
+}
 
+.headerStyle {
+    width:100%;
 }
 
 
